test_suite/tests/compile_error_cases/anon_lifetime_3.stderr
error: anonymized lifetimes not supported
 --> tests/compile_error_cases/anon_lifetime_3.rs:5:33
  |
5 |     fn f(&self) -> DummyWrapper<'_>;
  |                                 ^^
