test_suite/tests/compile_error_cases/anon_lifetime_3.rs
struct DummyWrapper<'a>(&'a ());

#[moq::automock]
trait Trait {
    fn f(&self) -> DummyWrapper<'_>;
}

fn main() {}
